<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_start"
    android:layout_marginTop="@dimen/margin_top"
    android:layout_marginEnd="@dimen/margin_start"
    android:layout_marginBottom="@dimen/margin_top">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/blinking_indicator"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="@dimen/margin_start"
            android:background="@drawable/blinking_circle"
            android:contentDescription="@string/indicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stopwatch_timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:text="@string/zero_time"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/blinking_indicator"
            app:layout_constraintTop_toTopOf="parent" />

        <maliauka.sasha.pomodoro.customview.CustomView
            android:id="@+id/custom_view"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:custom_color="@color/purple_500"
            app:custom_style="fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/start_pause_button"
            app:layout_constraintStart_toEndOf="@id/stopwatch_timer"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start_pause_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_start"
            android:contentDescription="@string/start_pause"
            android:padding="@dimen/padding"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_start"
            android:background="@color/transparent"
            android:contentDescription="@string/delete"
            android:padding="@dimen/padding"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>